Reworked how table resizes. It now checks for the minimum widths of each column and prevents the resize if the new width of it would be smaller than the minimum width. By introducing this, a wrapper around the table was also introduced that has horizontal scroll on it to hide the rest of the table that would be outside its boundaries.

--- a/table/src/table/Table.css
+++ b/table/src/table/Table.css
@@ -101,3 +101,25 @@
 .table-selected-row.table-selected-row {
   background-color: var(--color2, #383d47);
 }
+
+
+
+
+.horizontal-scroll {
+    overflow-x: auto;
+    background-color: var(--color1, #5a6272);
+}
+
+.horizontal-scroll::-webkit-scrollbar {
+    height:10px;
+}
+  
+  .horizontal-scroll::-webkit-scrollbar-thumb {
+    background: var(--color11, #00b0a4);
+    border-radius: 5px;
+  }
+  
+  .horizontal-scroll::-webkit-scrollbar-thumb:hover {
+    background: var(--color12, #00998f);
+  }
+  
